alignement bugfix

--- a/themes/drupalaton_theme/sass/_desktop.scss
+++ b/themes/drupalaton_theme/sass/_desktop.scss
@@ -7,7 +7,12 @@
   width: 960px;
   margin: 0 auto;
 }
-
+.container_12 {
+  margin: 40px auto;
+}
+.panel-separator {
+  display: none;
+}
 #nav {
   width: $dekstopwidth;
   margin: 0 auto;
