--- a/themes/drupalaton_theme/sass/_drupalaton.scss
+++ b/themes/drupalaton_theme/sass/_drupalaton.scss
@@ -760,7 +760,7 @@ div.social {
 .about {
   margin-bottom: 60px;
 }
-.keynote {
+.keynote.container_12 {
   margin-bottom: 20px;
   margin-top: 60px;
 }
@@ -769,9 +769,6 @@ div.social {
 }
 .about-wrapper {
   margin-top: 20px;
-}
-.keynote-wrapper {
-  margin-top: 60px;
 }
 
 // tables style
